--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -6,7 +6,7 @@
 
 
     <!-- Login form -->
-    <div class="container col-lg-3 col-lg-offset-1">
+    <div class="container col-lg-3 col-lg-offset-1 login-form-container">
         <h4 class="text-center">Login</h4>
         <hr>
 
@@ -20,20 +20,20 @@
         <form method="post" action="{% url 'login' %}" class="form-horizontal login-form">
             {% csrf_token %}
 
-            <div class="form-group">
-                <div class="col-sm-12">
-                    <label>{{ form.username.label_tag }} </label>
-                    {{ form.username | addcss:"form-control" }}
+            <div class="col-sm-12">
+                <div class="form-group has-feedback">
+{#                    {{ form.username | addcss:"form-control" }}#}
+                    <input autofocus="" class="form-control" id="id_username" maxlength="254" name="username" type="text" required="" placeholder="Email">
+                    <span class="fa fa-envelope-o form-control-feedback"></span>
                 </div>
-
             </div>
 
-            <div class="form-group">
-                <div class="col-sm-12">
-                    <label>{{ form.password.label_tag }} </label>
-                    {{ form.password | addcss:"form-control" }}
+             <div class="col-sm-12">
+                <div class="form-group has-feedback">
+{#                    {{ form.password | addcss:"form-control" }}#}
+                    <input class="form-control" id="id_password" name="password" type="password" required="" placeholder="Password">
+                    <span class="fa fa-key form-control-feedback"></span>
                 </div>
-
             </div>
 
             <div class="form-group">
@@ -63,7 +63,7 @@
     </div>
 
     <!-- Create user form -->
-    <div class="container col-lg-4 col-lg-offset-2">
+    <div class="container col-lg-4 col-lg-offset-2 login-form-container">
         <h4 class="text-center">Sign up</h4>
         <hr>
 
@@ -72,32 +72,27 @@
 
             <div class="form-group">
                 <div class="col-sm-12">
-                    <label for=''> {{ signup_form.email.label }} </label>
                     {{ signup_form.email | addcss:"form-control" }}
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-sm-6">
-                    <label for=''> {{ signup_form.first_name.label }} </label>
-                    {{signup_form.first_name|addcss:"form-control"}}
+                    {{ signup_form.first_name|addcss:"form-control" }}
                 </div>
                 <div class="col-sm-6">
-                    <label for=''> {{ signup_form.last_name.label }} </label>
                     {{ signup_form.last_name | addcss:"form-control" }}
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-sm-12">
-                    <label for=''> {{ signup_form.password.label }} </label>
                     {{ signup_form.password | addcss:"form-control" }}
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-sm-12">
-                    <label for=''> {{ signup_form.confirm_password.label }} </label>
                     {{ signup_form.confirm_password | addcss:"form-control" }}
                 </div>
             </div>
