--- a/templates/catalog/edit_item.html
+++ b/templates/catalog/edit_item.html
@@ -33,12 +33,21 @@
             </div>
 
             <div class="form-group">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                     <label for=''> {{ form.isbn.label }} </label>
                     {{ form.isbn | addcss:"form-control" }}
                 </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-6">
+                    <label for=''> {{ form.published_date.label }} </label>
+                    <br>
+                    {{ form.published_date | addcss:"form-control" }}
+                </div>
                 <div class="col-sm-6">
                     <label for=''> {{ form.date_aquired.label }} </label>
+                    <br>
                     {{ form.date_aquired | addcss:"form-control" }}
                 </div>
             </div>
@@ -79,7 +88,7 @@
         </form>
     </div>
 
-    <img id="img_preview" src="{{ form.instance.image_url|default_if_none:"/media/book_images/no_image.png" }}" />
+    <img id="img_preview" src="{{ form.instance.image_url|default_if_none:"/media/book_images/no_image.png" }}"/>
 
 
 {% endblock %}
