--- a/templates/catalog/item_details.html
+++ b/templates/catalog/item_details.html
@@ -31,6 +31,7 @@
             <p>{{ object.description }}</p>
             <hr>
             <p>ISBN: {{ object.isbn }}</p>
+            <p>Published date: {{ object.published_date | date:"F j, Y" }}</p>
             <p>Date aquired: {{ object.date_aquired | date:"F j, Y" }}</p>
             <p>Price: {{ object.currency.symbol }} {{ object.price }}</p>
             <p>Quantity: {{ object.quantity }}</p>
